--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
 						</ul>
 						<div class="header-menu__contacts">
 							<div class="socials">
-								<a href="#!" class="svg-tg">
+								<a href="https://t.me/Alishmenn" class="svg-tg">
 									<svg>
 										<use href="./img/socials/svgSprite.svg#svg-tg"></use>
 									</svg>
 								</a>
-								<a href="#!" class="svg-vk"> 
+								<a href="https://vk.com/alishmen" class="svg-vk"> 
 									<svg>
 										<use href="./img/socials/svgSprite.svg#svg-vk"></use>
 									</svg>
@@ -74,10 +74,10 @@
 										<use href="./img/socials/svgSprite.svg#svg-fb"></use>
 									</svg>
 								</a>
-								<a href="#!" class="svg-inst">
+								<a href="https://instagram.com/alishmen?r=nametag" class="svg-inst">
 									<img src="./img/socials/inst.svg" alt="">
 								</a>
-								<a href="#!" class="svg-ws">
+								<a href="https://wa.me/79828257177" class="svg-ws">
 									<svg>
 										<use href="./img/socials/svgSprite.svg#svg-whatsap"></use>
 									</svg>
@@ -88,7 +88,7 @@
 					</div>
 				</div>
 				<div class="header-social">
-					<a href="#!" class="header-social__link">
+					<a href="#!" class="header-social__link none">
 						<svg class="svg-ln">
 							<use href="./img/socials/svgSprite.svg#svg-ln"></use>
 						</svg>
@@ -127,7 +127,7 @@
 			</div>
 		</div>
 		<div class="header-content__banner">
-			<img src="./img/bg/header-bg.png" alt="Banner">
+			<img src="./img/bg/header.jpg" alt="Banner">
 		</div>
 	</section>
 
@@ -208,7 +208,46 @@
 			<div class="portfolio-title">
 				<h2 class="h2 grad-border">Портфолио</h2>
 			</div>
+			<div class="portfolio-variable">
+				<div class="portfolio-variable__item active">
+					<p>Все работы</p>
+				</div>
+				<div class="portfolio-variable__item">
+					<p>HTML верстка</p>
+				</div>
+				<div class="portfolio-variable__item">
+					<p>WordPress</p>
+				</div>
+			</div>
 			<div class="portofolio-wrapper">
+				<!-- <div class="row-card-1">
+					<div class="card card--big">
+						<a href="">
+							<div class="card__img"></div>
+							<div class="card__content"></div>
+						</a>
+					</div>
+					<div class="card card--big">
+						<a href="">
+							<div class="card__img"></div>
+							<div class="card__content"></div>
+						</a>
+					</div>
+				</div>
+				<div class="row-card-2">
+					<div class="card card--small">
+						<div class="card__img"></div>
+						<div class="card__content"></div>
+					</div>
+					<div class="card card--small">
+						<div class="card__img"></div>
+						<div class="card__content"></div>
+					</div>
+					<div class="card card--small">
+						<div class="card__img"></div>
+						<div class="card__content"></div>
+					</div>
+				</div> -->
 				<a href="https://alishmen.github.io/forest-travel/" target="_blank">
 					<div class="portfolio-card">
 						<div class="portfolio-card__img">
@@ -237,7 +276,7 @@
 						</div>
 					</div>
 				</a>
-				<div class="portfolio-card">
+				<div class="portfolio-card none">
 					<div class="portfolio-card__img">
 						<img src="./img/card/1-small.jpg" alt="img">
 					</div>
@@ -246,7 +285,7 @@
 						<p>Верстка многостраничного сайта </p>
 					</div>
 				</div>
-				<div class="portfolio-card">
+				<div class="portfolio-card none">
 					<div class="portfolio-card__img">
 						<img src="./img/card/2-small.jpg" alt="img">
 					</div>
@@ -255,7 +294,7 @@
 						<p>Верстка многостраничного сайта </p>
 					</div>
 				</div>
-				<div class="portfolio-card">
+				<div class="portfolio-card none">
 					<div class="portfolio-card__img">
 						<img src="./img/card/3-small.jpg" alt="img">
 					</div>
@@ -359,7 +398,7 @@
 								</a>
 							</li>
 							<li>
-								<a href="#!" class="svg-ws">
+								<a href="https://wa.me/79828257177" class="svg-ws">
 									<svg>
 										<use href="./img/socials/svgSprite.svg#svg-whatsap"></use>
 									</svg>
