--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 			<div class="portfolio-title">
 				<h2 class="h2 grad-border">Портфолио</h2>
 			</div>
-			<div class="portfolio-variable">
+			<!-- <div class="portfolio-variable">
 				<div class="portfolio-variable__item active">
 					<p>Все работы</p>
 				</div>
@@ -218,7 +218,7 @@
 				<div class="portfolio-variable__item">
 					<p>WordPress</p>
 				</div>
-			</div>
+			</div> -->
 			<div class="portofolio-wrapper">
 				<!-- <div class="row-card-1">
 					<div class="card card--big">
@@ -422,7 +422,7 @@
 			<div class="footer__corypthing">
 				<p>© 2023 — Альберт Буров</p>
 				<p>
-					Веб-разработчик из Ижевска, занимаюсь версткой и созданием сайтов. <br> Этот сайт сделал в рамках прохождения обучения по верстке на курсах от <a href="https://webcademy.ru/">WebCademy.ru</a>
+					Веб-разработчик из Ижевска, занимаюсь версткой и созданием сайтов. <br> Этот сайт сделал в рамках прохождения обучения по верстке на курсах от <a href="https://webcademy.ru/" target="_blank">WebCademy.ru</a>
 				</p>
 			</div>
 		</div>
